# bsd_sockets

bs_cli/: CMakeLists.txt  clients.cpp  clients.h  main.cpp  main.hpp  mydef.h
bs_srv/: CMakeLists.txt  main.cpp  main.hpp  mydef.h  server.cpp  server.hpp
common/: common.cpp  common.hpp  flog.cpp  flog.hpp
general_script/: config  start.sh  stop.sh
